14th sprint, 1st iter