@@ -8,38 +8,34 @@ import ru.practicum.shareit.exception.UserNotFoundException;
 import ru.practicum.shareit.user.dto.UserDto;
 import ru.practicum.shareit.user.mapper.UserMapper;
 import ru.practicum.shareit.user.model.User;
-import ru.practicum.shareit.user.repository.UserRepositoryImpl;
+import ru.practicum.shareit.user.repository.UserRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 @Slf4j
 public class UserServiceImpl implements UserService {
 
-    private final UserRepositoryImpl userRepository;
+    private final UserRepository userRepository;
 
     @Override
     public UserDto createUser(UserDto userDto) {
         log.info("create user");
-        if (userRepository.isEmailExists(userDto.getEmail())) {
-            throw new EmailCollisionException("email collision");
-        }
         User user = UserMapper.toUser(userDto);
-        userRepository.createUser(user);
+        userRepository.save(user);
         return UserMapper.toUserDto(user);
     }
 
     @Override
     public UserDto updateUser(Long id, UserDto userDto) {
         log.info("update user");
-        User oldUser = userRepository.getUserById(id);
-        if (oldUser == null) {
-            throw new UserNotFoundException("no user with id + " + id);
-        }
+        User oldUser = userRepository.findById(id)
+                .orElseThrow(() -> new UserNotFoundException("no user with id + " + id));
 
         if (userDto.getEmail() != null) {
-            if (userRepository.isEmailExists(userDto.getEmail()) && !oldUser.getEmail().equals(userDto.getEmail())) {
+            if (userRepository.existsByEmail(userDto.getEmail()) && !oldUser.getEmail().equals(userDto.getEmail())) {
                 throw new EmailCollisionException("email collision");
             }
             oldUser.setEmail(userDto.getEmail());
@@ -47,32 +43,33 @@ public class UserServiceImpl implements UserService {
         if (userDto.getName() != null) {
             oldUser.setName(userDto.getName());
         }
-        userRepository.updateUser(id, oldUser);
-        return UserMapper.toUserDto(oldUser);
+        User user = userRepository.save(oldUser);
+        return UserMapper.toUserDto(user);
     }
 
     @Override
     public UserDto deleteUser(Long userId) {
         log.info("delete user");
-        return UserMapper.toUserDto(userRepository.deleteUserById(userId));
+        User userToDelete = userRepository.findById(userId)
+                .orElseThrow(() -> new UserNotFoundException("no user with id + " + userId));
+        userRepository.delete(userToDelete);
+        return UserMapper.toUserDto(userToDelete);
     }
 
     @Override
     public List<UserDto> getUsers() {
-        log.info("get users");
-        return userRepository.getUsers()
+        log.info("get all users");
+        return userRepository.findAll()
                 .stream()
                 .map(UserMapper::toUserDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public UserDto getUser(Long userId) {
         log.info("get user");
-        User user = userRepository.getUserById(userId);
-        if (user == null) {
-            throw new UserNotFoundException("no user " + userId + " found");
-        }
-        return UserMapper.toUserDto(userRepository.getUserById(userId));
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new UserNotFoundException("no user " + userId + " found"));
+        return UserMapper.toUserDto(user);
     }
 }
